--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,30 @@
-version: '3.8'  # Docker Compose versiyonu
-
 services:
-  app_postgis:
-    image: postgis/postgis:latest
-    container_name: app_postgis
-    env_file: ./.env
-    volumes:
-      - app_postgis:/var/lib/postgresql/data  # Veritabanı verilerini volume'e kaydediyor
-    ports:
-      - "5433:5432"  # Host:container port eşlemesi
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-
   app_api:
+    build:
+      context: .
+      dockerfile: app/DockerFile
     container_name: app_api
-    build: ./app 
-    env_file: ./.env
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ./app:/usr/src/app/ 
+      - .:/app
     ports:
-      - "8002:8000"  
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://avnadmin:AVNS_uB3eS5nBg9hbv93vLAa@hediyele-hediyele.h.aivencloud.com/defaultdb
     depends_on:
-      - app_postgis 
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
+      - db
 
-  app_redis:
-    container_name: app_redis
-    image: redis:latest  
+  db:
+    image: postgres:13
+    container_name: app_db
+    environment:
+      POSTGRES_DB: defaultdb
+      POSTGRES_USER: avnadmin
+      POSTGRES_PASSWORD: AVNS_uB3eS5nBg9hbv93vLAa
     ports:
-      - "6379:6379" 
-
-  app_bg_tasks:
-    container_name: app_bg_tasks
-    build: ./app 
-    depends_on:
-      - app_postgis
-    env_file: .env
-    command: saq saq_tasks.main.settings --web 
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  app_postgis: 
+  postgres_data:
