feat: folder and premium chat talk

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 fastapi
-sqlalchemy
-psycopg2-binary
-pydantic
 uvicorn
-pandas
-python-jose[cryptography]
-alembic
+psycopg2
+python-dotenv
+openai 
